# DOSRecomp

./: .gitignore  CMakeLists.txt  LICENSE  PRD.md  PROGRESS.md  README.md  TODO.md
.github/workflows/: ci.yml
docs/: architecture.md
examples/: hello.com.asm  tiny_mz.asm
include/dosrecomp/analysis/: function_recovery.hpp  loop_recovery.hpp
include/dosrecomp/backend/: elf_writer.hpp
include/dosrecomp/cfg/: cfg_builder.hpp
include/dosrecomp/compiler/: branching_compiler.hpp  cpp_backend.hpp  exit_program_compiler.hpp  straight_line_compiler.hpp
include/dosrecomp/decoder/: effective_address.hpp  instruction_decoder.hpp
include/dosrecomp/ir/: control_flow_ir.hpp  register_ssa.hpp
include/dosrecomp/loader/: binary_loader.hpp
include/dosrecomp/optimizer/: constant_propagation.hpp  dead_value_elimination.hpp
include/dosrecomp/plugins/: plugin_registry.hpp
include/dosrecomp/runtime/: bios_timer.hpp  conventional_memory.hpp  current_directory.hpp  dos_environment.hpp  int10.hpp  int13.hpp  int16.hpp  int21.hpp  int21_directory.hpp  int21_file.hpp  mode13.hpp  pc_speaker.hpp  real_mode_memory.hpp  segmented_address.hpp  virtual_drive.hpp  virtual_file_system.hpp
include/dosrecomp/semantics/: instruction_translator.hpp
src/analysis/: function_recovery.cpp  loop_recovery.cpp
src/backend/: elf_writer.cpp
src/cfg/: cfg_builder.cpp
src/cli/: main.cpp
src/compiler/: branching_compiler.cpp  cpp_backend.cpp  exit_program_compiler.cpp  straight_line_compiler.cpp
src/decoder/: effective_address.cpp  instruction_decoder.cpp
src/ir/: control_flow_ir.cpp  register_ssa.cpp
src/loader/: binary_loader.cpp
src/optimizer/: constant_propagation.cpp  dead_value_elimination.cpp
src/plugins/: plugin_registry.cpp
src/runtime/: bios_timer.cpp  conventional_memory.cpp  current_directory.cpp  dos_environment.cpp  int10.cpp  int13.cpp  int16.cpp  int21.cpp  int21_directory.cpp  int21_file.cpp  mode13.cpp  pc_speaker.cpp  real_mode_memory.cpp  virtual_drive.cpp  virtual_file_system.cpp
src/semantics/: instruction_translator.cpp
tests/: cfg_tests.cpp  cli_tests.cpp  constant_propagation_tests.cpp  conventional_memory_tests.cpp  cpp_backend_tests.cpp  current_directory_tests.cpp  dead_value_elimination_tests.cpp  decoder_tests.cpp  dos_environment_tests.cpp  effective_address_tests.cpp  elf_writer_tests.cpp  exit_program_compiler_tests.cpp  function_recovery_tests.cpp  int10_tests.cpp  int13_tests.cpp  int16_tests.cpp  int1a_tests.cpp  int21_directory_tests.cpp  int21_file_tests.cpp  int21_tests.cpp  ir_tests.cpp  loader_tests.cpp  loop_recovery_tests.cpp  mode13_tests.cpp  pc_speaker_tests.cpp  plugin_registry_tests.cpp  real_mode_memory_tests.cpp  segmented_address_tests.cpp  semantics_tests.cpp  ssa_tests.cpp  straight_line_compiler_tests.cpp  virtual_drive_tests.cpp  virtual_file_system_tests.cpp
