cmake_minimum_required(VERSION 3.23)

project(DOSRecomp VERSION 0.1.0 LANGUAGES CXX)

option(DOSRECOMP_BUILD_TESTS "Build DOSRecomp tests" ON)

add_library(dosrecomp_loader
    src/loader/binary_loader.cpp
)
add_library(dosrecomp::loader ALIAS dosrecomp_loader)

target_compile_features(dosrecomp_loader PUBLIC cxx_std_23)
target_include_directories(dosrecomp_loader
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
)
target_compile_options(dosrecomp_loader PRIVATE -Wall -Wextra -Wpedantic -Werror)

add_library(dosrecomp_decoder src/decoder/instruction_decoder.cpp)
add_library(dosrecomp::decoder ALIAS dosrecomp_decoder)
target_compile_features(dosrecomp_decoder PUBLIC cxx_std_23)
target_include_directories(dosrecomp_decoder PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
target_compile_options(dosrecomp_decoder PRIVATE -Wall -Wextra -Wpedantic -Werror)

add_library(dosrecomp_cfg src/cfg/cfg_builder.cpp)
add_library(dosrecomp::cfg ALIAS dosrecomp_cfg)
target_compile_features(dosrecomp_cfg PUBLIC cxx_std_23)
target_include_directories(dosrecomp_cfg PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
target_link_libraries(dosrecomp_cfg PUBLIC dosrecomp::decoder)
target_compile_options(dosrecomp_cfg PRIVATE -Wall -Wextra -Wpedantic -Werror)

add_library(dosrecomp_ir src/ir/control_flow_ir.cpp src/ir/register_ssa.cpp)
add_library(dosrecomp::ir ALIAS dosrecomp_ir)
target_compile_features(dosrecomp_ir PUBLIC cxx_std_23)
target_include_directories(dosrecomp_ir PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
target_link_libraries(dosrecomp_ir PUBLIC dosrecomp::cfg)
target_compile_options(dosrecomp_ir PRIVATE -Wall -Wextra -Wpedantic -Werror)

add_library(dosrecomp_semantics src/semantics/instruction_translator.cpp)
add_library(dosrecomp::semantics ALIAS dosrecomp_semantics)
target_compile_features(dosrecomp_semantics PUBLIC cxx_std_23)
target_include_directories(dosrecomp_semantics PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
target_link_libraries(dosrecomp_semantics PUBLIC dosrecomp::decoder dosrecomp::ir)
target_compile_options(dosrecomp_semantics PRIVATE -Wall -Wextra -Wpedantic -Werror)

add_library(dosrecomp_runtime src/runtime/int10.cpp src/runtime/int16.cpp src/runtime/int21.cpp src/runtime/virtual_drive.cpp)
add_library(dosrecomp::runtime ALIAS dosrecomp_runtime)
target_compile_features(dosrecomp_runtime PUBLIC cxx_std_23)
target_include_directories(dosrecomp_runtime PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
target_compile_options(dosrecomp_runtime PRIVATE -Wall -Wextra -Wpedantic -Werror)

add_library(dosrecomp_analysis src/analysis/function_recovery.cpp src/analysis/loop_recovery.cpp)
add_library(dosrecomp::analysis ALIAS dosrecomp_analysis)
target_compile_features(dosrecomp_analysis PUBLIC cxx_std_23)
target_include_directories(dosrecomp_analysis PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
target_link_libraries(dosrecomp_analysis PUBLIC dosrecomp::cfg)
target_compile_options(dosrecomp_analysis PRIVATE -Wall -Wextra -Wpedantic -Werror)

add_library(dosrecomp_backend src/backend/elf_writer.cpp)
add_library(dosrecomp::backend ALIAS dosrecomp_backend)
target_compile_features(dosrecomp_backend PUBLIC cxx_std_23)
target_include_directories(dosrecomp_backend PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
target_compile_options(dosrecomp_backend PRIVATE -Wall -Wextra -Wpedantic -Werror)

add_library(dosrecomp_optimizer src/optimizer/constant_propagation.cpp)
add_library(dosrecomp::optimizer ALIAS dosrecomp_optimizer)
target_compile_features(dosrecomp_optimizer PUBLIC cxx_std_23)
target_include_directories(dosrecomp_optimizer PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
target_link_libraries(dosrecomp_optimizer PUBLIC dosrecomp::ir)
target_compile_options(dosrecomp_optimizer PRIVATE -Wall -Wextra -Wpedantic -Werror)

add_library(dosrecomp_compiler src/compiler/exit_program_compiler.cpp)
add_library(dosrecomp::compiler ALIAS dosrecomp_compiler)
target_compile_features(dosrecomp_compiler PUBLIC cxx_std_23)
target_include_directories(dosrecomp_compiler PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
target_link_libraries(dosrecomp_compiler PUBLIC dosrecomp::loader dosrecomp::decoder dosrecomp::semantics dosrecomp::backend)
target_compile_options(dosrecomp_compiler PRIVATE -Wall -Wextra -Wpedantic -Werror)

add_executable(dosrecomp src/cli/main.cpp)
target_link_libraries(dosrecomp PRIVATE dosrecomp::loader dosrecomp::cfg dosrecomp::ir dosrecomp::compiler)
target_compile_options(dosrecomp PRIVATE -Wall -Wextra -Wpedantic -Werror)

if(DOSRECOMP_BUILD_TESTS)
    enable_testing()
    add_executable(loader_tests tests/loader_tests.cpp)
    target_link_libraries(loader_tests PRIVATE dosrecomp::loader)
    target_compile_options(loader_tests PRIVATE -Wall -Wextra -Wpedantic -Werror)
    add_test(NAME loader_tests COMMAND loader_tests)
    add_executable(decoder_tests tests/decoder_tests.cpp)
    target_link_libraries(decoder_tests PRIVATE dosrecomp::decoder)
    target_compile_options(decoder_tests PRIVATE -Wall -Wextra -Wpedantic -Werror)
    add_test(NAME decoder_tests COMMAND decoder_tests)
    add_executable(cfg_tests tests/cfg_tests.cpp)
    target_link_libraries(cfg_tests PRIVATE dosrecomp::cfg)
    target_compile_options(cfg_tests PRIVATE -Wall -Wextra -Wpedantic -Werror)
    add_test(NAME cfg_tests COMMAND cfg_tests)
    add_executable(ir_tests tests/ir_tests.cpp)
    target_link_libraries(ir_tests PRIVATE dosrecomp::ir)
    target_compile_options(ir_tests PRIVATE -Wall -Wextra -Wpedantic -Werror)
    add_test(NAME ir_tests COMMAND ir_tests)
    add_executable(ssa_tests tests/ssa_tests.cpp)
    target_link_libraries(ssa_tests PRIVATE dosrecomp::ir)
    target_compile_options(ssa_tests PRIVATE -Wall -Wextra -Wpedantic -Werror)
    add_test(NAME ssa_tests COMMAND ssa_tests)
    add_executable(semantics_tests tests/semantics_tests.cpp)
    target_link_libraries(semantics_tests PRIVATE dosrecomp::semantics)
    target_compile_options(semantics_tests PRIVATE -Wall -Wextra -Wpedantic -Werror)
    add_test(NAME semantics_tests COMMAND semantics_tests)
    add_executable(int21_tests tests/int21_tests.cpp)
    target_link_libraries(int21_tests PRIVATE dosrecomp::runtime)
    target_compile_options(int21_tests PRIVATE -Wall -Wextra -Wpedantic -Werror)
    add_test(NAME int21_tests COMMAND int21_tests)
    add_executable(int10_tests tests/int10_tests.cpp)
    target_link_libraries(int10_tests PRIVATE dosrecomp::runtime)
    target_compile_options(int10_tests PRIVATE -Wall -Wextra -Wpedantic -Werror)
    add_test(NAME int10_tests COMMAND int10_tests)
    add_executable(int16_tests tests/int16_tests.cpp)
    target_link_libraries(int16_tests PRIVATE dosrecomp::runtime)
    target_compile_options(int16_tests PRIVATE -Wall -Wextra -Wpedantic -Werror)
    add_test(NAME int16_tests COMMAND int16_tests)
    add_executable(virtual_drive_tests tests/virtual_drive_tests.cpp)
    target_link_libraries(virtual_drive_tests PRIVATE dosrecomp::runtime)
    target_compile_options(virtual_drive_tests PRIVATE -Wall -Wextra -Wpedantic -Werror)
    add_test(NAME virtual_drive_tests COMMAND virtual_drive_tests)
    add_executable(function_recovery_tests tests/function_recovery_tests.cpp)
    target_link_libraries(function_recovery_tests PRIVATE dosrecomp::analysis)
    target_compile_options(function_recovery_tests PRIVATE -Wall -Wextra -Wpedantic -Werror)
    add_test(NAME function_recovery_tests COMMAND function_recovery_tests)
    add_executable(loop_recovery_tests tests/loop_recovery_tests.cpp)
    target_link_libraries(loop_recovery_tests PRIVATE dosrecomp::analysis)
    target_compile_options(loop_recovery_tests PRIVATE -Wall -Wextra -Wpedantic -Werror)
    add_test(NAME loop_recovery_tests COMMAND loop_recovery_tests)
    add_executable(elf_writer_tests tests/elf_writer_tests.cpp)
    target_link_libraries(elf_writer_tests PRIVATE dosrecomp::backend)
    target_compile_options(elf_writer_tests PRIVATE -Wall -Wextra -Wpedantic -Werror)
    add_test(NAME elf_writer_tests COMMAND elf_writer_tests)
    add_executable(constant_propagation_tests tests/constant_propagation_tests.cpp)
    target_link_libraries(constant_propagation_tests PRIVATE dosrecomp::optimizer)
    target_compile_options(constant_propagation_tests PRIVATE -Wall -Wextra -Wpedantic -Werror)
    add_test(NAME constant_propagation_tests COMMAND constant_propagation_tests)
    add_executable(exit_program_compiler_tests tests/exit_program_compiler_tests.cpp)
    target_link_libraries(exit_program_compiler_tests PRIVATE dosrecomp::compiler)
    target_compile_options(exit_program_compiler_tests PRIVATE -Wall -Wextra -Wpedantic -Werror)
    add_test(NAME exit_program_compiler_tests COMMAND exit_program_compiler_tests)
    add_executable(cli_tests tests/cli_tests.cpp)
    add_dependencies(cli_tests dosrecomp)
    target_compile_definitions(cli_tests PRIVATE DOSRECOMP_CLI_PATH="$<TARGET_FILE:dosrecomp>")
    target_compile_options(cli_tests PRIVATE -Wall -Wextra -Wpedantic -Werror)
    add_test(NAME cli_tests COMMAND cli_tests)
endif()
